# docs/swagger.json
@@ -52,14 +52,14 @@
                   "$ref": "#/components/schemas/User"
                 },
                 "examples": {
-                  "New User Bob Fellow": {
+                  "New User Pedro Lemos": {
                     "value": {
-                      "id": 12,
-                      "firstName": "Bob",
-                      "lastName": "Fellow",
-                      "email": "bob.fellow@gmail.com",
-                      "dateOfBirth": "1996-08-24",
-                      "emailVerified": false,
+                      "id": "61bf36c912a217d4fedf6839",
+                      "firstName": "Pedro",
+                      "lastName": "Lemos",
+                      "email": "pedro.lemos@gmail.com",
+                      "dateOfBirth": "1979-06-02",
+                      "emailVerified": true,
                       "createDate": "2020-11-18"
                     }
                   }
@@ -106,11 +106,11 @@
                 "examples": {
                   "Updated User Rebecca Baker": {
                     "value": {
-                      "id": 13,
-                      "firstName": "Rebecca",
-                      "lastName": "Baker",
-                      "email": "rebecca@gmail.com",
-                      "dateOfBirth": "1985-10-02",
+                      "id": "61bf36c912a217d4fedf6839",
+                      "firstName": "Luiza",
+                      "lastName": "Lemos",
+                      "email": "luiza.lemos@gmail.com",
+                      "dateOfBirth": "2015-29-03",
                       "emailVerified": false,
                       "createDate": "2019-08-24"
                     }
@@ -223,13 +223,69 @@
         }
       }
     },
-    "/user/login": {
+    "/user/auth": {
       "post": {
         "description": "Make user Login",
         "summary": "Login an user",
         "tags": [
           "User"
         ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "description": "",
+                  "type": "object",
+                  "properties": {
+                    "accessToken": {
+                      "type": "string",
+                      "minLength": 1
+                    },
+                    "refershToken": {
+                      "type": "string",
+                      "minLength": 1
+                    },
+                    "expiresIn": {
+                      "type": "number",
+                      "minLength": 1
+                    }
+                  },
+                  "required": [
+                    "accessToken"
+                  ],
+                  "x-examples": {
+                    "example-1": {
+                      "accessToken": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "operationId": "post-user-auth"
+      }
+    },
+    "/user/auth/refreshtoken": {
+      "post": {
+        "description": "Refresh user token",
+        "summary": "Refresh user token",
+        "tags": [
+          "User"
+        ],
+        "requestBody": {
+          "description": "Optional description in *Markdown*",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "OK",
@@ -257,7 +313,7 @@
             }
           }
         },
-        "operationId": "post-user-login"
+        "operationId": "refreshtoken-user-auth"
       }
     },
     "/item": {
