# src/domain/user/auth.js
@@ -1,5 +1,6 @@
 const user = require("../../server/models/user.model");
 const refreshTokenModel = require("../../server/models/refreshToken.model");
+const tokenBlackListModel = require("../../server/models/tokenBlackList.model");
 const bcrypt = require("bcryptjs");
 const jwt = require("jsonwebtoken");
 
@@ -21,10 +22,10 @@ async function auth(req, res, next) {
     return res.send({
       message: `Wrong Password`,
     });
+  const userJSON = userDB.toJSON();
+  delete userJSON.password;
 
-  delete userDB.password;
-
-  const accessToken = jwt.sign(userDB.toJSON(), SECRET, {
+  const accessToken = jwt.sign(userJSON, SECRET, {
     expiresIn: 3000,
   });
   const expiresIn = new Date().getTime();
@@ -43,4 +44,51 @@ async function auth(req, res, next) {
     }
   );
 }
-module.exports = { auth };
+async function isTokenBlackList(token) {
+  const tokenBlackList = await tokenBlackListModel.findOne({
+    token,
+  });
+  if (tokenBlackList) return true;
+  return false;
+}
+async function addTokenBlackList(token) {
+  const tokenBlackList = await tokenBlackListModel.create({
+    token,
+  });
+}
+async function refresh(req, res, next) {
+  const { authorization } = req.headers;
+
+  
+  if(isTokenBlackList(authorization)) return res.send({
+    message: "This Token is Blocked"
+  })
+  
+  const userInfo = jwt.verify(authorization, SECRET);
+  
+  delete userInfo.exp;
+  delete userInfo.iat;
+  
+  const accessToken = jwt.sign(userInfo, SECRET, {
+    expiresIn: 3000,
+  });
+
+  addTokenBlackList(authorization)
+
+  const expiresIn = new Date().getTime();
+  +3000;
+
+  const refreshToken = refreshTokenModel.findOneAndUpdate(
+    { userID: userInfo.id, token: authorization },
+    { userID: userInfo.id, token: accessToken },
+    { upsert: true, new: true },
+    (err, doc) => {
+      return res.send({
+        accessToken,
+        refreshToken: doc.id,
+        expiresIn,
+      });
+    }
+  );
+}
+module.exports = { auth, refresh };
